--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,28 @@
 <h1>Listing products</h1>
+<div class="row">
+  <form>
+    <div class="form-group row">
+      <div class="col-2">
+        <label for="ex1">Price: from</label>
+        <input class="form-control" id="ex1" type="number" min="0" step="1">
+      </div>
+      <div class="col-2">
+        <label for="ex2">to</label>
+        <input class="form-control" id="ex2" type="number" min="0" step="1">
+      </div>
+      <div class="col-4">
+        <label for="ex3">Category Name</label>
+        <%= select_tag "categories", options_from_collection_for_select(Category.all, "id", "name"), {class: "form-control"} %>
+      </div>
+      <div class="col-4">
+        <label for="ex3">Product Name</label>
+        <input class="form-control" id="ex3" type="text">
+      </div>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
  
 <table class="table table-striped table-bordered table-hover table-sm">
   <tr>
