resolve pg names conflict, add test for filters feature

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,7 +7,7 @@
  
   <% @categories.each do |category| %>
     <tr>
-      <td><%= category.name %></td>
+      <td><%= category.title %></td>
       <td><%= link_to 'Show', category_path(category) %></td>
     </tr>
   <% end %>
